test/scc_test/exp/semantic-errors/002.a
002.t:4:5: error: expression must have pointer-to-function type